main.tf
provider "google" {
  project = var.project_id
}

locals {
  admin_pw = random_password.admin.result
  env_vars = merge(
    var.env_vars,
    length(lookup(var.env_vars, "admin_pw", "")) == 0 ? {
      admin_pw = local.admin_pw
    } : {}
  )
}

resource "google_compute_instance" "instance" {
  name         = "${var.goog_cm_deployment_name}-vm"
  machine_type = var.machine_type
  zone         = var.zone

  tags = ["${var.goog_cm_deployment_name}-deployment"]

  boot_disk {
    device_name = "${var.goog_cm_deployment_name}-disk"

    initialize_params {
      size  = var.boot_disk_size
      type  = var.boot_disk_type
      image = var.source_image
    }
  }

  can_ip_forward      = var.ip_forward
  deletion_protection = var.deletion_protection

  network_interface {
    subnetwork = local.create_vpc ? google_compute_subnetwork.subnet[0].id : data.google_compute_subnetwork.existing_subnet[0].id

    access_config {
      nat_ip = var.enable_static_ip ? google_compute_address.static_ip[0].address : null
    }
  }

  metadata = {
    user_data_map      = jsonencode(local.env_vars)
    enable_letsencrypt = tostring(var.enable_letsencrypt)
  }

  metadata_startup_script = <<-EOF
    #!/bin/bash

    if [ -f /usr/local/openvpn_as/etc/as.conf ]; then
        exit 0
    fi

    echo unattended-upgrades unattended-upgrades/enable_auto_updates boolean true | debconf-set-selections
    dpkg-reconfigure -f noninteractive unattended-upgrades

    bash -c 'OVPN_INIT_MANUAL=true bash <(curl -fsS https://packages.openvpn.net/as/install.sh) --yes --as-version=3.2.3'
    apt-mark hold openvpn-as

    /usr/bin/ovpn-init --gcp --batch --force

    until sacli status 2>/dev/null | grep -q '"api": "on"'
    do
        sleep 2
    done
    sacli --key "dnsproxy.mode" --value "always" ConfigPut

    ENABLE_LETSENCRYPT=$(curl -s -H "Metadata-Flavor: Google" "http://metadata.google.internal/computeMetadata/v1/instance/attributes/enable_letsencrypt")
    if [ "$ENABLE_LETSENCRYPT" = "true" ]; then
        PUBLIC_IP=$(curl -s -H "Metadata-Flavor: Google" "http://metadata.google.internal/computeMetadata/v1/instance/network-interfaces/0/access-configs/0/external-ip")
        sacli --key "acme.ip_addresses.0" --value "$PUBLIC_IP" ConfigPut
        sacli --key "acme.cert_profile" --value "shortlived" ConfigPut
    fi

    sacli start

    if [ "$ENABLE_LETSENCRYPT" = "true" ]; then
        echo y | sacli AcmeRegisterAccount
        sacli AcmeRequestCertificate
    fi

    . /usr/local/openvpn_as/etc/VERSION

    echo "OpenVPN Access Server Appliance $AS_VERSION \n \l" >/etc/issue
    cat >/etc/update-motd.d/00-header <<HEADER
#!/bin/sh
echo "Welcome to OpenVPN Access Server Appliance $AS_VERSION"
HEADER
  EOF

  depends_on = [google_compute_firewall.tcp_443]
}

resource "google_compute_firewall" "tcp_443" {
  count = var.enable_tcp_443 ? 1 : 0

  name = "${var.goog_cm_deployment_name}-tcp-443"
  network = local.create_vpc ? google_compute_network.vpc[0].name : data.google_compute_network.existing_vpc[0].name

  allow {
    ports = ["443"]
    protocol = "tcp"
  }

  source_ranges =  compact([for range in split(",", var.tcp_443_source_ranges) : trimspace(range)])

  target_tags = ["${var.goog_cm_deployment_name}-deployment"]
}

resource "google_compute_firewall" "tcp_943" {
  count = var.enable_tcp_943 ? 1 : 0

  name = "${var.goog_cm_deployment_name}-tcp-943"
  network = local.create_vpc ? google_compute_network.vpc[0].name : data.google_compute_network.existing_vpc[0].name

  allow {
    ports = ["943"]
    protocol = "tcp"
  }

  source_ranges =  compact([for range in split(",", var.tcp_943_source_ranges) : trimspace(range)])

  target_tags = ["${var.goog_cm_deployment_name}-deployment"]
}

resource "google_compute_firewall" "udp_1194" {
  count = var.enable_udp_1194 ? 1 : 0

  name = "${var.goog_cm_deployment_name}-udp-1194"
  network = local.create_vpc ? google_compute_network.vpc[0].name : data.google_compute_network.existing_vpc[0].name

  allow {
    ports = ["1194"]
    protocol = "udp"
  }

  source_ranges =  compact([for range in split(",", var.udp_1194_source_ranges) : trimspace(range)])

  target_tags = ["${var.goog_cm_deployment_name}-deployment"]
}

resource "google_compute_firewall" "tcp_22" {
  count = var.enable_tcp_22 ? 1 : 0

  name = "${var.goog_cm_deployment_name}-tcp-22"
  network = local.create_vpc ? google_compute_network.vpc[0].name : data.google_compute_network.existing_vpc[0].name

  allow {
    ports = ["22"]
    protocol = "tcp"
  }

  source_ranges =  compact([for range in split(",", var.tcp_22_source_ranges) : trimspace(range)])

  target_tags = ["${var.goog_cm_deployment_name}-deployment"]
}

resource "random_password" "admin" {
  length = 12
  override_special = "!@#$%^&*()-_=+"
}
